LPS-65259 Add padding to avoid overflow in search container

--- a/modules/apps/collaboration/document-library/document-library-web/src/main/resources/META-INF/resources/image_gallery_display/css/main.scss
+++ b/modules/apps/collaboration/document-library/document-library-web/src/main/resources/META-INF/resources/image_gallery_display/css/main.scss
@@ -5,6 +5,10 @@
 		clear: both;
 	}
 
+	.lfr-search-container-wrapper {
+		padding: 0 15px;
+	}
+
 	.carousel.image-viewer-base {
 		margin: 0 auto;
 		max-height: 100%;
